Prevent Potential Gap Before Secondary Actions If No Main Are Present

--- a/css/admin.css
+++ b/css/admin.css
@@ -149,7 +149,7 @@
 	gap: 10px;
 }
 
-.siteorigin-installer-wrap .siteorigin-installer-item .so-buttons.so-buttons-force-wrap .so-buttons-main {
+.siteorigin-installer-wrap .siteorigin-installer-item .so-buttons.so-buttons-force-wrap a {
 	flex: 100%;
 
 }
